refactor: use regular list instead of immutable list